# xiao_round_display

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md  api.md  idf_component.yml  xiao_battery.c  xiao_common.c  xiao_common.h  xiao_lcd.c  xiao_lcd.h  xiao_lcd_touch_cst816s.c  xiao_lvgl.c  xiao_lvgl.h  xiao_round_display.c  xiao_rtc.c  xiao_sd_card.c  xiao_touch.c  xiao_touch.h  xiao_touch_cst816s.h
.github/workflows/: build_example.yml  pre_commit_check.yml  upload_component.yml
examples/xiao-round-display-example/: CMakeLists.txt
examples/xiao-round-display-example/main/: CMakeLists.txt  idf_component.yml  xiao-round-display-example.c
include/: xiao_battery.h  xiao_round_display.h  xiao_rtc.h  xiao_sd_card.h
